force-app/main/default/objects/Acxiom_Integration__c/Acxiom_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Acxiom Integration</label>
</CustomObject>