force-app/main/default/objects/Acxiom_Integration__c/fields/Access_type_cd__c.field-meta.xml
<CustomField>
    <fullName>Access_type_cd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Access-type-cd</label>
    <length>10</length>
    <type>Text</type>
</CustomField>