force-app/main/default/objects/Acxiom_Integration__c/fields/ccnlookupMethod__c.field-meta.xml
<CustomField>
    <fullName>ccnlookupMethod__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ccnlookupMethod</label>
    <length>20</length>
    <type>Text</type>
</CustomField>