force-app/main/default/objects/Acxiom_Integration__c/fields/Channel_type_cd__c.field-meta.xml
<CustomField>
    <fullName>Channel_type_cd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Channel-type-cd</label>
    <length>10</length>
    <type>Text</type>
</CustomField>