force-app/main/default/objects/Acxiom_Integration__c/fields/Client_Id__c.field-meta.xml
<CustomField>
    <fullName>Client_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client_Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>