force-app/main/default/objects/Acxiom_Integration__c/fields/Client_Secret__c.field-meta.xml
<CustomField>
    <fullName>Client_Secret__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Client Secret</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>