force-app/main/default/objects/Acxiom_Integration__c/fields/Environment_Type__c.field-meta.xml
<CustomField>
    <fullName>Environment_Type__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Environment Type</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>