force-app/main/default/objects/Acxiom_Integration__c/fields/fullsearchMethod__c.field-meta.xml
<CustomField>
    <fullName>fullsearchMethod__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>fullsearchMethod</label>
    <length>20</length>
    <type>Text</type>
</CustomField>