force-app/main/default/objects/Acxiom_Integration__c/fields/Host__c.field-meta.xml
<CustomField>
    <fullName>Host__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Host</label>
    <length>50</length>
    <type>Text</type>
</CustomField>