force-app/main/default/objects/Acxiom_Integration__c/fields/TokenEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>TokenEndpointURL__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TokenEndpointURL</label>
    <type>Url</type>
</CustomField>