force-app/main/default/objects/Acxiom_Integration__c/fields/Vendor_cd__c.field-meta.xml
<CustomField>
    <fullName>Vendor_cd__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor-cd</label>
    <length>10</length>
    <type>Text</type>
</CustomField>