force-app/main/default/objects/Acxiom_Integration__c/fields/Website_Id__c.field-meta.xml
<CustomField>
    <fullName>Website_Id__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Website-Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>